recursion.cons.nlast.Nlast.scala.error
Erreur de compilation :
Nlast:3: error: ':' expected but '(' found.
  def nfirst(reverse(l), n:Int): List[Int] = {
                    ^Nlast:11: error: identifier expected but '}' found.
}
^